docs/v0.2.0a42/_sources/reference/_autosummary/hpcflow.app.ValueSequence.rst.txt
hpcflow.app.ValueSequence
=========================

.. currentmodule:: hpcflow.app

.. autoclass:: ValueSequence
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ValueSequence.from_json_like
      ~ValueSequence.from_linear_space
      ~ValueSequence.from_range
      ~ValueSequence.make_persistent
      ~ValueSequence.to_dict
      ~ValueSequence.to_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ValueSequence.app
      ~ValueSequence.input_path
      ~ValueSequence.input_type
      ~ValueSequence.is_sub_value
      ~ValueSequence.normalised_inputs_path
      ~ValueSequence.normalised_path
      ~ValueSequence.parameter
      ~ValueSequence.path_split
      ~ValueSequence.path_type
      ~ValueSequence.resource_scope
      ~ValueSequence.values
      ~ValueSequence.workflow
   
   